--- a/index.html
+++ b/index.html
@@ -9,7 +9,21 @@
 </head>
 
 <body>
-fk u bitch the work is incomplete...
+<header class="header">
+    <div class="title">
+        i n s t a g r a m
+    </div>
+    <div class="noti">
+          <div id="like">
+              <a href="#"><img src="/resources/heart .png" alt="heart .png"></a>
+          </div>
+         <div id="msg">
+            <a href="#"><img src="/resources/facebook-messenger .png" alt="facebook-messenger.svg"></a>
+        </div>
+      
+       
+    </div>
+</header>
 </body>
 
 </html>
