--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     </div>
     <div class="noti">
           <div id="like">
-              <a href="#"><img src="/resources/heart .png" alt="heart .png"></a>
+              <a href="#"><img src="./resources/heart .png" alt="heart .png"></a>
           </div>
          <div id="msg">
-            <a href="#"><img src="/resources/facebook-messenger .png" alt="facebook-messenger.svg"></a>
+            <a href="#"><img src="./resources/facebook-messenger .png" alt="facebook-messenger.svg"></a>
         </div>
       
        
