--- a/index.html
+++ b/index.html
@@ -33,7 +33,21 @@
     
 </main>
 <footer class="footer">
-    
+    <div class="home">
+        <a href="#"><img src="./resources/home (3).png" alt=""></a>
+    </div>
+    <div class="search">
+        <a href="#"><img src="./resources/search (1).png" alt=""></a>
+    </div>
+    <div class="new">
+        <a href="#"><img src="./resources/square-plus.png" alt="/resources/films.png"></a>
+    </div>
+    <div class="reel">
+        <a href="#"><img src="./resources/films.png" alt=""></a>
+    </div>
+    <div class="account">
+        <a href="#"><img src="./resources/circle.png" alt=""></a>
+    </div>
 </footer>
 </body>
 
